--- a/index.html
+++ b/index.html
@@ -2,90 +2,106 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio - Elia Giordano</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio - Universo</title>
   <style>
     body {
       margin: 0;
-      overflow: hidden;
       font-family: 'Orbitron', sans-serif;
-      background-color: black;
-      color: #7de3ff;
+      background: #000;
+      color: #1e90ff;
+      overflow: hidden;
     }
 
     header {
-      position: absolute;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      font-size: 2rem;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.7);
       z-index: 10;
-    }
-
-    nav {
-      position: absolute;
-      top: 80px;
-      left: 50%;
-      transform: translateX(-50%);
       display: flex;
-      gap: 40px;
-      z-index: 10;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem 0;
     }
 
-    nav a {
+    header a {
+      color: #1e90ff;
       text-decoration: none;
-      color: #7de3ff;
-      transition: 0.3s;
       font-size: 1.2rem;
+      transition: color 0.3s;
     }
 
-    nav a:hover {
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
+    header a:hover {
+      color: #fff;
     }
 
     section {
-      position: absolute;
-      top: 150px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80%;
-      max-width: 800px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      z-index: 10;
-      font-size: 1.2rem;
+      padding: 2rem;
     }
 
-    canvas {
+    h1 {
+      font-size: 3rem;
+      color: #1e90ff;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.3rem;
+      max-width: 800px;
+    }
+
+    .stars {
       position: fixed;
       top: 0;
       left: 0;
-      display: block;
-      z-index: 1;
+      width: 100vw;
+      height: 100vh;
+      z-index: -1;
+      overflow: hidden;
+    }
+
+    .star {
+      position: absolute;
+      width: 3px;
+      height: 3px;
+      background: white;
+      border-radius: 50%;
+      transition: transform 0.2s ease-out;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>Benvenuto nel mio universo</header>
-  <nav>
+  <header>
+    <a href="#home">Home</a>
     <a href="#chi-sono">Chi sono</a>
     <a href="#competenze">Competenze</a>
     <a href="#contatti">Contatti</a>
-  </nav>
+  </header>
 
-  <section id="chi-sono">
-    <h2>Chi sono</h2>
-    <p>
-      Sono Elia Giordano, un appassionato di 3D e animazione nonché di intelligenza artificiale.
-      Sebbene non sia uno specialista, sto imparando da autodidatta con grande curiosità e determinazione.
-      Mi affascina unire arte e tecnologia per creare esperienze visive coinvolgenti.
-    </p>
+  <div class="stars"></div>
+
+  <section id="home">
+    <h1>Benvenuto nel mio universo</h1>
+    <p>Presto troverai qui i miei progetti</p>
   </section>
 
-  <section id="competenze" style="top: 350px;">
-    <h2>Competenze</h2>
-    <ul>
+  <section id="chi-sono">
+    <h1>Chi sono</h1>
+    <p>Sono un appassionato autodidatta di grafica 3D, animazione e intelligenza artificiale. Mi piace esplorare nuovi strumenti creativi e imparare ogni giorno qualcosa di nuovo per migliorarmi. Non sono un esperto, ma metto passione e curiosità in tutto quello che faccio.</p>
+  </section>
+
+  <section id="competenze">
+    <h1>Competenze</h1>
+    <p>Conosco e utilizzo i seguenti software:</p>
+    <ul style="list-style: none; padding: 0; font-size: 1.3rem;">
       <li>Photoshop</li>
       <li>Illustrator</li>
       <li>InDesign</li>
@@ -96,86 +112,37 @@
     </ul>
   </section>
 
-  <section id="contatti" style="top: 550px;">
-    <h2>Contatti</h2>
-    <p>📞 +39 3515749331</p>
-    <p>📧 elgio0926@gmail.com</p>
-    <p>🔗 <a href="https://www.linkedin.com/in/elia-giordano" style="color: #7de3ff;">Elia Giordano</a></p>
+  <section id="contatti">
+    <h1>Contatti</h1>
+    <p>Telefono: +39 3515749331</p>
+    <p>Email: elgio0926@gmail.com</p>
+    <p>LinkedIn: Elia Giordano</p>
   </section>
 
-  <canvas id="bg"></canvas>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
-    const canvas = document.getElementById('bg');
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ canvas });
-
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    camera.position.z = 30;
-
+    const starsContainer = document.querySelector('.stars');
+    const numStars = 150;
     const stars = [];
-    const mouse = new THREE.Vector2(0, 0);
 
-    function createStar() {
-      const geometry = new THREE.SphereGeometry(0.3, 12, 12);
-      const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
-      const star = new THREE.Mesh(geometry, material);
-
-      star.position.x = (Math.random() - 0.5) * 200;
-      star.position.y = (Math.random() - 0.5) * 200;
-      star.position.z = (Math.random() - 0.5) * 200;
-      scene.add(star);
+    for (let i = 0; i < numStars; i++) {
+      const star = document.createElement('div');
+      star.className = 'star';
+      star.style.top = Math.random() * window.innerHeight + 'px';
+      star.style.left = Math.random() * window.innerWidth + 'px';
+      starsContainer.appendChild(star);
       stars.push(star);
     }
 
-    for (let i = 0; i < 500; i++) createStar();
-
-    // Pianeti
-    const colors = [0x00ff00, 0xff00ff, 0xffff00];
-    for (let i = 0; i < 6; i++) {
-      const geometry = new THREE.SphereGeometry(2, 32, 32);
-      const material = new THREE.MeshStandardMaterial({ color: colors[i % 3] });
-      const planet = new THREE.Mesh(geometry, material);
-      planet.position.set((Math.random() - 0.5) * 100, (Math.random() - 0.5) * 100, (Math.random() - 0.5) * 100);
-      scene.add(planet);
-    }
-
-    const light = new THREE.PointLight(0xffffff, 1);
-    light.position.set(10, 10, 10);
-    scene.add(light);
-
-    function animate() {
-      requestAnimationFrame(animate);
-
+    document.addEventListener('mousemove', (e) => {
       stars.forEach(star => {
-        const dx = star.position.x - mouse.x * 100;
-        const dy = star.position.y - mouse.y * 100;
+        const dx = star.offsetLeft - e.clientX;
+        const dy = star.offsetTop - e.clientY;
         const dist = Math.sqrt(dx * dx + dy * dy);
-        if (dist < 20) {
-          star.position.x += dx / dist;
-          star.position.y += dy / dist;
-        } else {
-          star.position.x += (Math.random() - 0.5) * 0.05;
-          star.position.y += (Math.random() - 0.5) * 0.05;
-        }
+        const force = Math.min(50 / dist, 5);
+        const x = dx * force;
+        const y = dy * force;
+        star.style.transform = `translate(${x}px, ${y}px)`;
       });
-
-      renderer.render(scene, camera);
-    }
-
-    animate();
-
-    document.addEventListener('mousemove', (event) => {
-      mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
-      mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
-    });
-
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
 </body>
