--- a/index.html
+++ b/index.html
@@ -1,235 +1,256 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio - Universum</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      font-family: 'Orbitron', sans-serif;
-      background-color: #000;
-      color: #1e90ff;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: #000;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0,0,0,0.7);
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
-      z-index: 10;
-    }
+        .section {
+            padding: 50px;
+            text-align: center;
+        }
 
-    header a {
-      color: #1e90ff;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
+        h1 {
+            font-size: 3em;
+            color: #1E90FF;
+            transition: color 0.3s ease;
+        }
 
-    header a:hover {
-      color: #fff;
-      text-shadow: 0 0 10px #fff;
-    }
+        h1:hover {
+            color: #00BFFF;
+        }
 
-    section {
-      min-height: 100vh;
-      padding: 8rem 2rem 2rem;
-      text-align: center;
-      position: relative;
-      z-index: 1;
-    }
+        .menu {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 30px;
+        }
 
-    h1, h2 {
-      margin-bottom: 1rem;
-      text-shadow: 0 0 10px #1e90ff;
-    }
+        .menu a {
+            color: #fff;
+            font-size: 1.2em;
+            margin: 0 20px;
+            text-decoration: none;
+            padding: 10px;
+            transition: color 0.3s ease;
+        }
 
-    h1 {
-      font-size: 3rem;
-      color: #1e90ff;
-    }
+        .menu a:hover {
+            color: #00BFFF;
+        }
 
-    h2 {
-      font-size: 2.5rem;
-      color: #1e90ff;
-    }
+        .project-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
 
-    p {
-      font-size: 1.2rem;
-      max-width: 800px;
-      margin: 0 auto 2rem;
-      color: #bbb;
-    }
+        .project {
+            width: 200px;
+            text-align: center;
+            position: relative;
+        }
 
-    ul {
-      list-style: none;
-      padding: 0;
-    }
+        .project img {
+            width: 100%;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
 
-    ul li {
-      font-size: 1.2rem;
-      margin: 0.5rem 0;
-      color: #bbb;
-      transition: color 0.3s;
-    }
+        .project img:hover {
+            transform: scale(1.1);
+        }
 
-    ul li:hover {
-      color: #fff;
-    }
+        .project video {
+            width: 100%;
+            display: none;
+            border-radius: 10px;
+        }
 
-    /* Progetti: video preview */
-    .project {
-      max-width: 640px;
-      margin: 2rem auto;
-      position: relative;
-    }
+        .project video.active {
+            display: block;
+        }
 
-    .project video {
-      width: 100%;
-      border: 2px solid #1e90ff;
-      border-radius: 8px;
-      cursor: pointer;
-    }
+        .dropdown {
+            display: none;
+        }
 
-    .project .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.4);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-size: 1.5rem;
-      opacity: 1;
-      transition: opacity 0.3s;
-      border-radius: 8px;
-    }
+        .dropdown.open {
+            display: block;
+        }
 
-    .project video.playing + .overlay {
-      opacity: 0;
-      pointer-events: none;
-    }
+        .dropdown-btn {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            text-align: left;
+        }
 
-    /* Stars background */
-    .stars {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-    }
+        .dropdown-content {
+            display: none;
+            background-color: #333;
+            min-width: 100%;
+            position: absolute;
+            z-index: 1;
+        }
 
-    .star {
-      position: absolute;
-      width: 3px;
-      height: 3px;
-      background: #fff;
-      border-radius: 50%;
-      transition: transform 0.2s ease-out;
-    }
-  </style>
+        .dropdown-content a {
+            color: white;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #575757;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .stars {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        .star {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background-color: #fff;
+            border-radius: 50%;
+            animation: moveStars 2s infinite linear;
+        }
+
+        @keyframes moveStars {
+            0% { transform: translate(0, 0); }
+            100% { transform: translate(100%, 100%); }
+        }
+
+        .text {
+            margin-top: 30px;
+            font-size: 1.2em;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <a href="#home">Home</a>
-    <a href="#chi-sono">Chi sono</a>
-    <a href="#competenze">Competenze</a>
-    <a href="#progetti">Progetti</a>
-    <a href="#contatti">Contatti</a>
-  </header>
+    <div class="stars"></div>
 
-  <div class="stars"></div>
-
-  <section id="home">
-    <h1>Benvenuto nel mio universo</h1>
-    <p>Presto troverai qui i miei progetti più significativi.</p>
-  </section>
-
-  <section id="chi-sono">
-    <h2>Chi sono</h2>
-    <p>
-      Sono un appassionato autodidatta di grafica 3D, animazione e intelligenza artificiale.  
-      Ogni giorno mi dedico a imparare nuovi strumenti e tecniche, partecipando a community e tutorial online.  
-      Pur non avendo una formazione accademica nel settore, la mia curiosità e determinazione guidano il mio percorso di crescita.
-    </p>
-  </section>
-
-  <section id="competenze">
-    <h2>Competenze</h2>
-    <ul>
-      <li>Photoshop</li>
-      <li>Illustrator</li>
-      <li>InDesign</li>
-      <li>Inventor</li>
-      <li>3ds Max</li>
-      <li>AutoCAD</li>
-      <li>Blender</li>
-    </ul>
-  </section>
-
-  <section id="progetti">
-    <h2>Progetti</h2>
-    <div class="project">
-      <video id="blenderVideo" poster="anteprima-blender.jpg">
-        <source src="spherelumsvdo.mp4" type="video/mp4">
-        Il tuo browser non supporta il video.
-      </video>
-      <div class="overlay">Clicca per riprodurre l'anteprima</div>
+    <div class="section">
+        <h1>Benvenuto nel mio mondo</h1>
+        <p class="text">Sono un appassionato di 3D, animazioni e intelligenza artificiale. Imparo in modo autonomo e cerco sempre di evolvermi.</p>
     </div>
-  </section>
 
-  <section id="contatti">
-    <h2>Contatti</h2>
-    <p>📞 +39 3515749331</p>
-    <p>📧 <a href="mailto:elgio0926@gmail.com" style="color: #1e90ff;">elgio0926@gmail.com</a></p>
-    <p>🔗 <a href="https://www.linkedin.com/in/elia-giordano" target="_blank" style="color: #1e90ff;">Elia Giordano</a></p>
-  </section>
+    <div class="menu">
+        <a href="#progetti">Progetti</a>
+        <a href="#chi-sono">Chi Sono</a>
+        <a href="#contatti">Contatti</a>
+    </div>
 
-  <script>
-    // Stelle magnetiche
-    const starsContainer = document.querySelector('.stars');
-    const numStars = 150;
-    const stars = [];
-    for (let i = 0; i < numStars; i++) {
-      const star = document.createElement('div');
-      star.className = 'star';
-      star.style.left = Math.random() * window.innerWidth + 'px';
-      star.style.top = Math.random() * window.innerHeight + 'px';
-      starsContainer.appendChild(star);
-      stars.push(star);
-    }
-    document.addEventListener('mousemove', (e) => {
-      stars.forEach(star => {
-        const dx = star.offsetLeft - e.clientX;
-        const dy = star.offsetTop - e.clientY;
-        const dist = Math.hypot(dx, dy);
-        const force = Math.min(100 / dist, 5);
-        star.style.transform = `translate(${dx * force * 0.01}px, ${dy * force * 0.01}px)`;
-      });
-    });
+    <div class="section" id="progetti">
+        <h1>Progetti</h1>
+        <div class="dropdown">
+            <button class="dropdown-btn">Blender</button>
+            <div class="dropdown-content">
+                <a href="#" class="project-link" data-project="spherelumsvdo">Spherelum</a>
+                <a href="#" class="project-link" data-project="tazzinavdo">Tazzina</a>
+                <a href="#" class="project-link" data-project="rubikvdo">Rubik</a>
+                <a href="#" class="project-link" data-project="magicvdo">Magic</a>
+                <a href="#" class="project-link" data-project="pallavdo">Palla</a>
+                <a href="#" class="project-link" data-project="wtrvdo">Water</a>
+            </div>
+        </div>
 
-    // Anteprima video
-    const video = document.getElementById('blenderVideo');
-    const overlay = video.nextElementSibling;
-    overlay.addEventListener('click', () => {
-      if (video.paused) {
-        video.play();
-        overlay.style.opacity = '0';
-      }
-    });
-    video.addEventListener('ended', () => {
-      overlay.style.opacity = '1';
-    });
-  </script>
+        <div class="project-container">
+            <div class="project" id="spherelumsvdo">
+                <img src="spherelumsimg.jpg" alt="Spherelum" class="project-img">
+                <video src="spherelumsvdo.mp4" class="project-video"></video>
+            </div>
+            <div class="project" id="tazzinavdo">
+                <img src="tazzinaimg.jpg" alt="Tazzina" class="project-img">
+                <video src="tazzinavdo.mp4" class="project-video"></video>
+            </div>
+            <div class="project" id="rubikvdo">
+                <img src="rubikimg.jpg" alt="Rubik" class="project-img">
+                <video src="rubikvdo.mp4" class="project-video"></video>
+            </div>
+            <div class="project" id="magicvdo">
+                <img src="magicimg.jpg" alt="Magic" class="project-img">
+                <video src="magicvdo.mp4" class="project-video"></video>
+            </div>
+            <div class="project" id="pallavdo">
+                <img src="pallaimg.jpg" alt="Palla" class="project-img">
+                <video src="pallavdo.mp4" class="project-video"></video>
+            </div>
+            <div class="project" id="wtrvdo">
+                <img src="wtrimg.jpg" alt="Water" class="project-img">
+                <video src="wtrvdo.mp4" class="project-video"></video>
+            </div>
+        </div>
+    </div>
+
+    <div class="section" id="chi-sono">
+        <h1>Chi Sono</h1>
+        <p>Sono un appassionato autodidatta di 3D, animazioni e intelligenza artificiale. Mi piace esplorare nuove tecnologie e imparare continuamente, cercando di portare la mia creatività in ogni progetto.</p>
+    </div>
+
+    <div class="section" id="contatti">
+        <h1>Contatti</h1>
+        <p>Email: elgio0926@gmail.com</p>
+        <p>Telefono: +39 3515749331</p>
+        <p><a href="https://www.linkedin.com/in/elia-giordano" target="_blank">LinkedIn</a></p>
+    </div>
+
+    <script>
+        document.querySelectorAll('.project-link').forEach(link => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                const projectId = e.target.getAttribute('data-project');
+                document.querySelectorAll('.project-video').forEach(video => {
+                    video.classList.remove('active');
+                });
+                document.getElementById(projectId).querySelector('.project-video').classList.add('active');
+            });
+        });
+
+        // Movimento delle stelle
+        const stars = document.querySelector('.stars');
+        for (let i = 0; i < 100; i++) {
+            let star = document.createElement('div');
+            star.classList.add('star');
+            star.style.top = `${Math.random() * window.innerHeight}px`;
+            star.style.left = `${Math.random() * window.innerWidth}px`;
+            stars.appendChild(star);
+        }
+
+        document.addEventListener('mousemove', (e) => {
+            const mouseX = e.clientX;
+            const mouseY = e.clientY;
+            document.querySelectorAll('.star').forEach(star => {
+                const distance = Math.hypot(star.offsetLeft - mouseX, star.offsetTop - mouseY);
+                const moveDistance = distance / 30;
+                star.style.transform = `translate(-${moveDistance}px, -${moveDistance}px)`;
+            });
+        });
+    </script>
 </body>
 </html>
